--- a/packages/pix-web/index.html
+++ b/packages/pix-web/index.html
@@ -8,6 +8,7 @@
   <body class="pt-dark">
     <div id="root"></div>
 
+    <script src="/bundle.config.js"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
